# photohub

./: .gitignore  README.md  pyproject.toml  requirements.txt
.tmp_appdata/: test_sqlite.db-journal
.tmp_appdata/PhotoHub/: photohub.db-journal  settings.json
.tmp_appdata_8347f8fc653d4f5ab201e01d22ac1450/PhotoHub/: photohub.db-journal  settings.json
.tmp_backend_s1_smoke/PhotoHub/: photohub.db  settings.json
.tmp_backend_s1_smoke2/PhotoHub/: settings.json
.tmp_batch_rename_smoke/PhotoHub/: photohub.db  photohub.db-journal  settings.json
.tmp_batch_rename_smoke2/PhotoHub/: photohub.db-journal  settings.json
.tmp_culling_hud_smoke/PhotoHub/: photohub.db-journal  settings.json
.tmp_culling_hud_smoke2/PhotoHub/: photohub.db-journal  settings.json
.tmp_metadata_ui_smoke/PhotoHub/: photohub.db-journal  settings.json
.tmp_quality_smoke/PhotoHub/: photohub.db-journal  settings.json
.tmp_theme_settings/PhotoHub/: settings.json
.tmp_theme_settings_check/PhotoHub/: settings.json
.tmp_ui1_diag/PhotoHub/: settings.json
.tmp_ui1_diag2/PhotoHub/: photohub.db-journal  settings.json
src/photohub/: db.py  (+5 more)
tests/: test_async_hooks.py  test_config.py  test_culling.py  test_edits.py  test_export_filters.py  test_export_quality_gate.py  test_export_watermark_layers.py  test_jobs.py  test_metadata.py  test_preload.py  test_preset_inheritance.py  test_presets.py  test_project_quality_service.py  test_projects.py  test_quality_checklist_schema.py  test_renames.py  test_storage.py  test_studio_profile_settings.py  test_watermark_schema.py  test_watermark_templates.py
(+27 files in other folders)
