[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photohub"
version = "0.1.0"
description = "Desktop toolbox for photographers: import, presets and export hub."
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
  "SQLAlchemy>=2.0",
  "Pillow>=10.0",
]

[project.optional-dependencies]
fluent = [
  "PySide6-Fluent-Widgets>=1.8.6",
]

[project.scripts]
photohub = "photohub.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
